home-dashboard/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-dashboard-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: home-dashboard
  ports:
    - name: web
      port: 3000
      targetPort: web
      nodePort: 30008
