home-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-dashboard-service
  namespace: default
spec:
  selector:
    app: home-dashboard
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: 3000
