home-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-dashboard-ingress
  namespace: default
  annotations:
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
  - host: dash.devhousestudios.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-dashboard-service
            port:
              number: 3000
  - host: home-dash.devhousestudios.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-dashboard-service
            port:
              number: 3000
